<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/suma_de_2_numeros"
        android:textColor="#171616"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/Lnum1"
        android:textColor="#100E0E"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/txtnum1"
        android:layout_width="342dp"
        android:layout_height="51dp"
        android:layout_marginTop="40dp"
        android:autofillHints="num1"
        android:ems="10"
        android:hint="@string/place1"
        android:inputType="number"
        android:textColor="@color/black"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.88"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/txtnum2"
        android:layout_width="350dp"
        android:layout_height="52dp"
        android:layout_marginTop="68dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/place2"
        android:inputType="number"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.933"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtnum1" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:shadowColor="#000000"
        android:text="@string/Lnum2"
        android:textColor="#151414"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.067"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtnum1" />

    <Button
        android:id="@+id/btnmas"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:text="@string/btnnmas"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.19"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtnum2" />

    <TextView
        android:id="@+id/lbresult"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="104dp"
        android:hint="@string/result"
        android:text="@string/resultado"
        android:textColor="#151313"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.184"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnmas" />

    <Button
        android:id="@+id/btnmenos"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:text="@string/btnmenos"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnmulti"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintStart_toEndOf="@+id/btnmas" />

    <Button
        android:id="@+id/btnmulti"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginBottom="44dp"
        android:text="@string/btnmulti"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/lbresult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintStart_toEndOf="@+id/btndiv" />

    <Button
        android:id="@+id/btndiv"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:text="@string/btndiv"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.19"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnmas" />

</androidx.constraintlayout.widget.ConstraintLayout>